﻿1.1.9 Release notes
* Better reporting
* DPS Value for talents
* Correction on Killing machine that would proc too much since 1.1.8.4
* New option tell the sim to keep Blood Runes synchronised.

1.1.8.5 Release notes
* Deathbringers Will 3rd proc on frost spec is ArP
* Bryntroll proc implemented

1.1.8.4 Release notes
* Removal of Glyph of Icy Touch II. 
* Bone Shield Precast when Many Fight option is checked.
* 2 pieces T9 and T10 bonus implemented.
* Death and Decay / Rune strike are back in the report/DPS summary.
* 3.3 Trinkets implemented (Whispering Fanged Skull, Deathbringers Will, Needle-Encrusted Scorpion)
* EP Value show DPS per AP.
* Proc code optimization for better performance.

1.1.8.3 Release notes
* Scourge Strike magical part can't crit anymore.

1.1.8.2 Release notes
* Correction on Dark Matter trinket.
* Removal of 3.2 specific code.
* Correction on ghoul not reseting correctly from a Master of ghoul spec to another.
* Correction on GoDisease not recalculating damage correctly.

1.1.8.1 Release notes
* Razorice is now stacking and won't give 10% frost damage at the start of the simulation.
* EP Value for trinkets are back.
* Scourge Stirke Magical part: (additive bonus, not multiplicative)
* Racials included (Expertise bonus, Blood Fury + pet damage bonus, Troll Berzerker, Arcane Torrent)
* New GoD behavior if patch 3.3 option is checked
* Some premade talent template.


1.1.8.0 Release notes
* New: A character editor. Old Character config files should work on the character editor but not on the sim.
* New: A Priority/Rotation/Intro editor. Select _None to remove an item (comment are welcome)
* Intro has is own combo box and configuration files and folder. (not having the intro folder can cause crash)
* Some GUI improvement 
* Rune Strike: Threat generated increased 17%
* Rune setup into rotation no more used.
* Empower Rune weapon available into intro and rotation.
* Few more premade Character