@@ -1,8 +1,10 @@
 ﻿1.1.9 Release notes
-* Better reporting
-* DPS Value for talents
+* Better reporting.
+* DPS Value for talents. Check Template Editor tab.
 * Correction on Killing machine that would proc too much since 1.1.8.4
 * New option tell the sim to keep Blood Runes synchronised.
+* EP Calculation: Hit and expertise are modified only to calculate their respective value.
+* Hyperspeed Accelerators implemented
 
 1.1.8.5 Release notes
 * Deathbringers Will 3rd proc on frost spec is ArP
